grid layout problem fixed. Ready for real styling now

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,8 +4,6 @@ article {
 }
 
 grid-view {
-  width: 100%;
-  height: 100%;
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 500px;
 }
