--- a/src/app/grid-view/grid-view.component.css
+++ b/src/app/grid-view/grid-view.component.css
@@ -1,7 +1,17 @@
+/* 
+ * :host selector is angular's way to target entire component
+ * default display is inline.
+ * change to block to correctly set size in app.component.css
+ */
+:host {
+  display: block;
+}
+
 section {
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
+  width: 100%;
+  height: 100%;
   padding: 10px;
+  box-sizing: border-box;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -9,6 +19,7 @@ section {
   row-gap: 10px;
 }
 
+/* This should be moved to grid-card component as :host */
 grid-card {
  height: 100%;
  border: 1px solid #333333;
@@ -16,4 +27,3 @@ grid-card {
  background-color: whitesmoke;
  box-sizing: border-box;
 }
-
